--- a/index.html
+++ b/index.html
@@ -1,138 +1,300 @@
-<!DOCTYPE HTML>
-<!--
-	Twenty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>CALIFA MOUNTAIN FESTIVAL</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="index is-preload">
-		<div id="page-wrapper">
+<!doctype html>
+<html lang="en">
 
-			<!-- Header -->
-				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">CALIFA MOUNTAIN FESTIVAL</a></h1>
-					<nav id="nav">
-						<ul>
-							<li class="current"><a href="index.html">Inicio</a></li>
-							<li class="submenu">
-								<a href="#">EDICIÓN 2024</a>
-								<ul>
-									<li><a href="#">INSCRIPCIONES</a></li>
-									<li><a href="#">REGLAMENTO</a></li>
-								</ul>
-							</li>
-							<li class="submenu">
-								<a href="#">EDICIÓN 2023</a>
-								<ul>
-									<li><a href="#">CLASIFICACIONES</a></li>
-									<li><a href="#">FOTOS & VIDEO</a></li>
-									<li><a href="#">REGLAMENTO</a></li>
-								</ul>
-							</li>
-							<li class="submenu">
-								<a href="#">EDICIÓN 2022</a>
-								<ul>
-									<li><a href="#">CLASIFICACIONES</a></li>
-									<li><a href="#">FOTOS & VIDEO</a></li>
-									<li><a href="#">REGLAMENTO</a></li>
-								</ul>
-							</li>
-							<li><a href="#" class="button primary  primary-bg-red">CONTACTO</a></li>
-						</ul>
-					</nav>
-				</header>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-			<!-- Banner -->
-				<section id="banner">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-					<div class="inner">
+    <title>Califa Mountain Festival</title>
 
-						<header>
-							<h2 >III CALIFA MOUNTAIN FESTIVAL</h2>
-						</header>
-						<img src="./images/califamountainfestival-logo-color-S.png" alt="Califa Mountain Festival" />
-						<p><strong>CAMPEONATO ANDALUCÍA CxM POR ETAPAS 2024</strong>
-						<br />
-						20-21-22 SEPTIEMBRE 2024
-						<br />
-						<footer>
-							<ul class="buttons stacked">
-								<li><a href="#" class="button fit scrolly primary-bg-red">PROXIMAMENTE +INFO</a></li>
+    <!-- CSS FILES -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;400;700&display=swap" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-icons.css" rel="stylesheet">
+    <link href="css/templatemo-festava-live.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+    <main>
+
+        <header class="site-header">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-12 col-12 d-flex flex-wrap">
+						<div class="col-lg-6 col-12 d-flex justify-content-lg-end align-items-center">
+							<ul class="social-icon d-flex justify-content-lg-end">
+								<li class="social-icon-item">
+									<a href="#" class="social-icon-link">
+										<span class="bi-facebook"></span>
+									</a>
+								</li>
+
+								<li class="social-icon-item">
+									<a href="#" class="social-icon-link">
+										<span class="bi-instagram"></span>
+									</a>
+								</li>
+
+								<li class="social-icon-item">
+									<a href="#" class="social-icon-link">
+										<span class="bi-youtube"></span>
+									</a>
+								</li>
 							</ul>
-						</footer>
+						</div>
+                    </div>
 
-					</div>
+                </div>
+            </div>
+        </header>
 
-				</section>
 
-			<!-- Main -->
-				<article id="main">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
+                    Califa Mountain Festival 2024
+                </a>
 
-						<section class="wrapper style3 container special">
+                <a href="ticket.html" class="btn custom-btn d-lg-none ms-auto me-4">Inscripciones</a>
 
-							<header class="major">
-								<h2><strong>PATROCINAN</strong></h2>
-							</header>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-							<div class="row">
-								<div class="col-6 col-12-narrower">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="#section_1">Edición 2024</a>
+                        </li>
+						<li class="nav-item">
+                            <a class="nav-link click-scroll" href="#">Edición 2023</a>
+                        </li>
+						<li class="nav-item">
+                            <a class="nav-link click-scroll" href="#">Edición 2022</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="#section_6">Contacto</a>
+                        </li>
+                    </ul>
 
-									<section>
-										<a href="https://www.dipucordoba.es/" target="_blank" class="image featured"><img src="./images/diputacion-logo-color.png" alt="Diputacion de Cordoba" /></a>
-										<header>
-											<h3>DIPUTACIÓN DE CÓRDOBA</h3>
-										</header>
-									</section>
+                    <a href="#" class="btn custom-btn d-lg-block d-none">Edición 2024</a>
+                </div>
+            </div>
+        </nav>
 
-								</div>
-								<div class="col-6 col-12-narrower">
 
-									<section>
-										<a href="https://www.dipucordoba.es/" target="_blank" class="image featured"><img src="./images/diputacion-logo-color.png" alt="Diputacion de Cordoba" /></a>
-										<header>
-											<h3>DIPUTACIÓN DE CÓRDOBA</h3>
-										</header>
-									</section>
+        <section class="hero-section" id="section_1">
+            <div class="section-overlay"></div>
 
-								</div>
-							</div>
-						</section>
+            <div class="container d-flex justify-content-center align-items-center">
+                <div class="row">
 
-				</article>
+                    <div class="col-12 mt-auto mb-5 text-center">
+						<img src="./images/califamountainfestival-logo-color-150Ancho.png" alt="Califa Mountain Festival" />
+						<h2 class="text-white mb-5">Campeonato de Andalucía de CxM por Etapas 2024</h2>
 
-			<!-- Footer -->
-				<footer id="footer">
+                        <a class="btn custom-btn smoothscroll" href="#">PROXIMAMENTE</a>
+                    </div>
 
-					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands circle fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon solid circle fa-envelope"><span class="label">Mail</span></a></li>
-					</ul>
+                    <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
+                        <div class="date-wrap">
+                            <h5 class="text-white">
+                                <i class="custom-icon bi-clock me-2"></i>
+                                20 - 2 SEP 2024
+                            </h5>
+                        </div>
 
-					<ul class="copyright">
-						<li>&copy; Califa Mountain Festival</li>
-					</ul>
+                        <div class="location-wrap mx-auto py-3 py-lg-0">
+                            <h5 class="text-white">
+                                <i class="custom-icon bi-geo-alt me-2"></i>
+                                Cerro Muriano, Córdoba
+                            </h5>
+                        </div>
 
-				</footer>
+                        <div class="social-share">
+                            <ul class="social-icon d-flex align-items-center justify-content-center">
+                                <span class="text-white me-3">RRSS:</span>
 
-		</div>
+                                <li class="social-icon-item">
+                                    <a href="#" class="social-icon-link">
+                                        <span class="bi-facebook"></span>
+                                    </a>
+                                </li>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+                                <li class="social-icon-item">
+                                    <a href="#" class="social-icon-link">
+                                        <span class="bi-twitter"></span>
+                                    </a>
+                                </li>
 
-	</body>
+                                <li class="social-icon-item">
+                                    <a href="#" class="social-icon-link">
+                                        <span class="bi-instagram"></span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-wrap">
+                <video autoplay="" loop="" muted="" class="custom-video" poster="">
+                    <source src="video/intro.mp4" type="video/mp4">
+                  Tu navegador no acepta la reproducción de video MP4 HTML5
+                </video>
+            </div>
+        </section>
+
+		<!--
+        <section class="about-section section-padding" id="section_2">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-6 col-12 mb-4 mb-lg-0 d-flex align-items-center">
+                        <div class="services-info">
+                            <h2 class="text-white mb-4">Califa Mountain Festival 2023</h2>
+
+                            <p class="text-white">Festava Live is free CSS template provided by TemplateMo website. This
+                                layout is built on Bootstrap v5.2.2 CSS library. You are free to use this template for
+                                your commercial website.</p>
+
+                            <h6 class="text-white mt-4">Once in Lifetime Experience</h6>
+
+                            <p class="text-white">You are not allowed to redistribute the template ZIP file on any other
+                                website without a permission.</p>
+
+                            <h6 class="text-white mt-4">Whole Night Party</h6>
+
+                            <p class="text-white">Please tell your friends about our website. Thank you.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-12">
+                        <div class="about-text-wrap">
+                            <img src="images/pexels-alexander-suhorucov-6457579.jpg" class="about-image img-fluid">
+
+                            <div class="about-text-info d-flex">
+                                <div class="d-flex">
+                                    <i class="about-text-icon bi-person"></i>
+                                </div>
+
+
+                                <div class="ms-4">
+                                    <h3>a happy moment</h3>
+
+                                    <p class="mb-0">your amazing festival experience with us</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+		-->
+        
+    </main>
+
+
+    <footer class="site-footer">
+        <div class="site-footer-top">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-6 col-12">
+                        <h2 class="text-white mb-lg-0">Redes Sociales</h2>
+                    </div>
+
+                    <div class="col-lg-6 col-12 d-flex justify-content-lg-end align-items-center">
+                        <ul class="social-icon d-flex justify-content-lg-end">
+                            <li class="social-icon-item">
+                                <a href="#" class="social-icon-link">
+                                    <span class="bi-facebook"></span>
+                                </a>
+                            </li>
+
+                            <li class="social-icon-item">
+                                <a href="#" class="social-icon-link">
+                                    <span class="bi-instagram"></span>
+                                </a>
+                            </li>
+
+                            <li class="social-icon-item">
+                                <a href="#" class="social-icon-link">
+                                    <span class="bi-youtube"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
+                    <h5 class="site-footer-title mb-3">Contacto</h5>
+
+                    <p class="text-white d-flex mb-1">
+                        <a href="tel: 651 53 37 35" class="site-footer-link">
+                            651 53 37 35
+                        </a>
+                    </p>
+
+                    <p class="text-white d-flex">
+                        <a href="mailto:rsrunningseries@gmail.com" class="site-footer-link">
+                            rsrunningseries@gmail.com
+                        </a>
+                    </p>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="site-footer-bottom">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-3 col-12 mt-5">
+                        <p class="copyright-text">Copyright © Califa Mountain Festival</p>
+                    </div>
+
+                    <div class="col-lg-8 col-12 mt-lg-5">
+                        <ul class="site-footer-links">
+                            <li class="site-footer-link-item">
+                                <a href="#" class="site-footer-link">Privacidad</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!--
+
+T e m p l a t e M o
+
+-->
+
+    <!-- JAVASCRIPT FILES -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/click-scroll.js"></script>
+    <script src="js/custom.js"></script>
+
+</body>
+
 </html>
