--- a/index.html
+++ b/index.html
@@ -66,20 +66,18 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_2024">Edición 2024</a>
+                            <a class="nav-link click-scroll text-yellow-dark-custom" href="index">Edición 2024</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_2023">Edición 2023</a>
+                            <a class="nav-link click-scroll" href="#2023">Edición 2023</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_2022">Edición 2022</a>
+                            <a class="nav-link click-scroll" href="#2022">Edición 2022</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_6">Contacto</a>
+                            <a class="nav-link click-scroll" href="#contacto">Contacto</a>
                         </li>
                     </ul>
-
-                    <a href="#" class="btn custom-btn d-lg-block d-none">Edición 2024</a>
 
                 </div>
             </div>
