--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
                             <a class="nav-link click-scroll text-yellow-dark-custom" href="index">Edición 2024</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#2023">Edición 2023</a>
+                            <a class="nav-link click-scroll" href="2023">Edición 2023</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#2022">Edición 2022</a>
+                            <a class="nav-link click-scroll" href="2022">Edición 2022</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#contacto">Contacto</a>
+                            <a class="nav-link click-scroll" href="contacto">Contacto</a>
                         </li>
                     </ul>
 
@@ -84,7 +84,7 @@
         </nav>
 
 
-        <section class="hero-section" id="section_2024">
+        <section class="hero-section" id="2024">
             <div class="section-overlay"></div>
 
             <div class="container d-flex justify-content-center align-items-center">
@@ -146,6 +146,30 @@
             </div>
         </section>
 
+        <section class="about-section section-padding yellow-dark-custom-bg" id="ediciones-anteriores">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-12">
+                        <div class="card margin-bottom-20px border-none">
+                            <div class="card-body">
+                                <h5 class="card-title text-blue-custom" id="contacto">Ediciones anteriores</h5>
+                                <p class="text-blue-custom">Si quieres ver que pasó en ediciones anteriores... ¡ Entra !</p>
+                                <div class="col-lg-12 col-12">
+                                    <div class="card-body">
+                                        <a href="2023" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">
+                                            <i class="bi bi-signpost-split-fill"> 2023 </i>
+                                        </a>
+                                        <a href="2022" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">
+                                            <i class="bi bi-signpost-split-fill">2022</i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- FOOTER -->
@@ -153,32 +177,36 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="mb-lg-0 text-yellow-dark-custom">Partners 2024</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <a href="https://dipucordoba.es" target="_blank"><img src="./images/diputacion-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    <h2 class="text-yellow-dark-custom">Partners 2024</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-2">
                 </div>
                 <div class="col-8">
-                    <a href="https://www.andalucia.org/es/turismo-y-deporte?utm_source=cd-runningseries&utm_medium=web&utm_campaign=patrocinio-califamountainfestival-2023&utm_content=logotipoweb" target="_blank"><img src="./images/junta-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    <a href="https://dipucordoba.es" target="_blank"><img class="artists-image" src="./images/diputacion-logo-blanco.png"/></a>
+                </div>
+                <div class="col-2">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                </div>
+                <div class="col-8">
+                    <a href="https://www.andalucia.org/es/turismo-y-deporte?utm_source=cd-runningseries&utm_medium=web&utm_campaign=patrocinio-califamountainfestival-2023&utm_content=logotipoweb" target="_blank"><img class="artists-image"  src="./images/junta-logo-blanco.png" /></a>
                 </div>
                 <div class="col-2">
                 </div>
             </div>
             <div class="row">
                 <div class="col-4">
-                    <a href="https://www.imdcordoba.es/" target="_blank"><img src="./images/imdeco-logo-blanco.png" style="width:100%" /></a>
+                    <a href="https://www.imdcordoba.es/" target="_blank"><img class="artists-image"  src="./images/imdeco-logo-blanco.png" /></a>
                 </div>
                 <div class="col-4">
-                    <a href="https://obejo.es/" target="_blank"><img src="./images/obejo-logo-blanco.png" style="width:100%" /></a>
+                    <a href="https://obejo.es/" target="_blank"><img class="artists-image" src="./images/obejo-logo-blanco.png"/></a>
                 </div>
                 <div class="col-4">
-                    <a href="https://fadmes.es/" target="_blank"><img src="./images/fadmes-logo-blanco.png" style="width:100%" /></a>
+                    <a href="https://fadmes.es/" target="_blank"><img class="artists-image" src="./images/fadmes-logo-blanco.png" /></a>
                 </div>
             </div>
             <div class="row">
