--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll text-yellow-dark-custom" href="index">Edición 2024</a>
+                            <a class="nav-link click-scroll text-yellow-dark-custom" href="2024">Edición 2024</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="2023">Edición 2023</a>
@@ -92,9 +92,10 @@
 
                     <div class="col-12 mt-auto mb-5 text-center">
                         <img src="./images/califamountainfestival-logo-color-150Ancho.png" alt="Califa Mountain Festival" />
-                        <h3 class="text-white mb-5">Campeonato de Andalucía de CxM por Etapas 2024</h3>
+                        <h3 class="text-white mb-5">Campeonato de Andalucía de CxM por Etapas 2024 | Trofeo UCO</h3>
 
-                        <a class="btn custom-btn smoothscroll" href="#">PROXIMAMENTE</a>
+                        <a class="btn custom-btn smoothscroll" href="2024">INFORMACIÓN</a>
+                        <a class="btn custom-btn smoothscroll" href="2024#inscripciones">INSCRIPCIONES</a>
                     </div>
 
                     <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
@@ -150,12 +151,25 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-12">
+                        <div class="card margin-bottom-20px yellow-dark-custom-bg border-none">
+                            <div class="card-body">
+                                <h5 class="card-title text-red-custom">Abrimos inscripciones</h5>
+                                <a href="2024" target="_blank"><img class="artists-image" src="2024/inscripciones.jpg" /></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-12">
                         <div class="card margin-bottom-20px border-none">
                             <div class="card-body">
-                                <h5 class="card-title text-blue-custom" id="contacto">Ediciones anteriores</h5>
-                                <p class="text-blue-custom">Si quieres ver que pasó en ediciones anteriores... ¡ Entra !</p>
+                                <h5 class="card-title text-blue-custom" id="contacto">Ediciones</h5>
+                                <p class="text-blue-custom">Si quieres ver que pasó en estas ediciones... ¡ Entra !</p>
                                 <div class="col-lg-12 col-12">
                                     <div class="card-body">
+                                        <a href="2023" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">
+                                            <i class="bi bi-signpost-split-fill"> 2024 </i>
+                                        </a>
                                         <a href="2023" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">
                                             <i class="bi bi-signpost-split-fill"> 2023 </i>
                                         </a>
@@ -177,46 +191,91 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-yellow-dark-custom">Partners 2024</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-2">
-                </div>
-                <div class="col-8">
-                    <a href="https://dipucordoba.es" target="_blank"><img class="artists-image" src="./images/diputacion-logo-blanco.png"/></a>
-                </div>
-                <div class="col-2">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-2">
-                </div>
-                <div class="col-8">
-                    <a href="https://www.andalucia.org/es/turismo-y-deporte?utm_source=cd-runningseries&utm_medium=web&utm_campaign=patrocinio-califamountainfestival-2023&utm_content=logotipoweb" target="_blank"><img class="artists-image"  src="./images/junta-logo-blanco.png" /></a>
-                </div>
-                <div class="col-2">
+                    <h2 class="mb-lg-0 text-yellow-dark-custom">Partners 2024</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-4">
-                    <a href="https://www.imdcordoba.es/" target="_blank"><img class="artists-image"  src="./images/imdeco-logo-blanco.png" /></a>
+                    <a href="https://www.imdcordoba.es/" target="_blank"><img src="./images/imdeco-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
                 <div class="col-4">
-                    <a href="https://obejo.es/" target="_blank"><img class="artists-image" src="./images/obejo-logo-blanco.png"/></a>
+                    <a href="https://dipucordoba.es" target="_blank"><img src="./images/diputacion-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
                 <div class="col-4">
-                    <a href="https://fadmes.es/" target="_blank"><img class="artists-image" src="./images/fadmes-logo-blanco.png" /></a>
+                    <a href="https://obejo.es/" target="_blank"><img src="./images/obejo-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-2">
+                </div>
+                <div class="col-2">
+                    <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-4">
+                    <a href="https://fadmes.es/" target="_blank"><img src="./images/fadmes-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-2">
+                    <a href="https://www.helvetia.es/" target="_blank"><img src="./images/helvetia-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-2">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-3">
+                </div>
+                <div class="col-3">
+                    <a href="https://www.uco.es/" target="_blank"><img src="./images/uco-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-3">
+                    <a href="https://www.uco.es/empresa/ucodeporte/" target="_blank"><img src="./images/ucodeporte-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-3">
+                </div>
+            </div>
+
             <div class="row">
                 <div class="col-8">
                     <h2 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores 2024</h2>
+                </div>
+                <div class="row">
+                    <div class="col-2">
+                    </div>
+                    <div class="col-4">
+                        <a href="https://superatesports.es/" target="_blank"><img src="./images/superate-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-4">
+                        <a href="https://www.innovaocular.com/" target="_blank"><img src="./images/innovaocular-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-4">
                     <h2 class="mb-lg-0 text-yellow-dark-custom">Colaboradores 2024</h2>
+                </div>
+                <div class="row">
+                    <div class="col-3">
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.tysa.es/" target="_blank"><img src="./images/tysa-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5">
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.nutridamente.com/" target="_blank"><img src="./images/nutridamente-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-5">
+                    </div>
                 </div>
             </div>
         </div>
@@ -242,7 +301,6 @@
             </div>
         </div>
     </footer>
-
     <!--
 
     T e m p l a t e M o
