--- a/contacto.html
+++ b/contacto.html
@@ -221,38 +221,87 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-4">
+                    <a href="https://www.imdcordoba.es/" target="_blank"><img src="./images/imdeco-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-4">
                     <a href="https://dipucordoba.es" target="_blank"><img src="./images/diputacion-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
+                <div class="col-4">
+                    <a href="https://obejo.es/" target="_blank"><img src="./images/obejo-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
             </div>
+
             <div class="row">
                 <div class="col-2">
                 </div>
-                <div class="col-8">
-                    <a href="https://www.andalucia.org/es/turismo-y-deporte?utm_source=cd-runningseries&utm_medium=web&utm_campaign=patrocinio-califamountainfestival-2023&utm_content=logotipoweb" target="_blank"><img src="./images/junta-logo-blanco.png" style="width:100%; height: auto" /></a>
+                <div class="col-2">
+                    <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-4">
+                    <a href="https://fadmes.es/" target="_blank"><img src="./images/fadmes-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-2">
+                    <a href="https://www.helvetia.es/" target="_blank"><img src="./images/helvetia-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
                 <div class="col-2">
                 </div>
             </div>
+
             <div class="row">
-                <div class="col-4">
-                    <a href="https://www.imdcordoba.es/" target="_blank"><img src="./images/imdeco-logo-blanco.png" style="width:100%" /></a>
+                <div class="col-3">
                 </div>
-                <div class="col-4">
-                    <a href="https://obejo.es/" target="_blank"><img src="./images/obejo-logo-blanco.png" style="width:100%" /></a>
+                <div class="col-3">
+                    <a href="https://www.uco.es/" target="_blank"><img src="./images/uco-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
-                <div class="col-4">
-                    <a href="https://fadmes.es/" target="_blank"><img src="./images/fadmes-logo-blanco.png" style="width:100%" /></a>
+                <div class="col-3">
+                    <a href="https://www.uco.es/empresa/ucodeporte/" target="_blank"><img src="./images/ucodeporte-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-3">
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-8">
                     <h2 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores 2024</h2>
+                </div>
+                <div class="row">
+                    <div class="col-2">
+                    </div>
+                    <div class="col-4">
+                        <a href="https://superatesports.es/" target="_blank"><img src="./images/superate-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-4">
+                        <a href="https://www.innovaocular.com/" target="_blank"><img src="./images/innovaocular-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-4">
                     <h2 class="mb-lg-0 text-yellow-dark-custom">Colaboradores 2024</h2>
+                </div>
+                <div class="row">
+                    <div class="col-3">
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.tysa.es/" target="_blank"><img src="./images/tysa-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5">
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.nutridamente.com/" target="_blank"><img src="./images/nutridamente-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-5">
+                    </div>
                 </div>
             </div>
         </div>
