--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                         <img src="./images/califamountainfestival-logo-color-150Ancho.png" alt="Califa Mountain Festival" />
                         <h3 class="text-white mb-5">Campeonato de Andalucía de CxM por Etapas 2024 | Trofeo UCO</h3>
 
-                        <a class="btn custom-btn smoothscroll" href="2024">INFORMACIÓN</a>
-                        <a class="btn custom-btn smoothscroll" href="2024#inscripciones">INSCRIPCIONES</a>
+                        <a class="btn custom-btn smoothscroll" href="2024" target="_blank">INFORMACIÓN</a>
+                        <a class="btn custom-btn smoothscroll" href="2024#inscripciones" target="_blank">INSCRIPCIONES</a>
                     </div>
 
                     <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
