--- a/index.html
+++ b/index.html
@@ -159,6 +159,153 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="card margin-bottom-20px">
+                    <div class="card-body" id="etapas">
+                        <h5 class="card-title text-red-custom">Información actividades</h5>
+
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body" id="etapa1">
+                                <h5 class="card-title text-yellow-dark-custom"><i class="bi bi-image-alt"></i> Etapa 1 - Viernes</h5>
+                                <div class="col-lg-12 col-12">
+                                    <div class="">
+                                        <div>
+                                            <p class="text-white">Modalidad CxM Nocturna</p>
+                                            <p class="text-white"><i class="bi bi-cursor"></i>12k</p>
+                                            <p class="text-white"><i class="bi bi-triangle-half"></i> 700+ | 700-</p>
+                                            <p class="text-white"><i class="bi bi-calendar3"></i> Viernes 20 Sept. 2024</p>
+                                            <p class="text-white"><i class="bi bi-clock"></i> 20:00h</p>
+                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Plaza Andalucía, Cerro Muriano (Córdoba)</p>
+                                            <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: 18 años</p>
+                                        </div>
+                                    </div>
+                                    <a href="2024#inscripciones" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Inscríbete aquí</a>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body" id="etapa2">
+                                <h5 class="card-title text-yellow-dark-custom"><i class="bi bi-image-alt"></i> Etapa 2 - Sábado</h5>
+                                <div class="col-lg-12 col-12">
+                                    <div class="">
+                                        <div>
+                                            <p class="text-white">Modalidad CxM</p>
+                                            <p class="text-white"><i class="bi bi-cursor"></i>25k</p>
+                                            <p class="text-white"><i class="bi bi-triangle-half"></i> 1000+ | 1000-</p>
+                                            <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
+                                            <p class="text-white"><i class="bi bi-clock"></i> 8:30h</p>
+                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Albergue Provincial, Cerro Muriano (Córdoba)</p>
+                                            <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: 18 años</p>
+                                        </div>
+                                    </div>
+                                    <a href="2024W#inscripciones" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Inscríbete aquí</a>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body" id="etapa3">
+                                <h5 class="card-title text-yellow-dark-custom"><i class="bi bi-image-alt"></i> Etapa 3 - Domingo</h5>
+                                <div class="col-lg-12 col-12">
+                                    <div class="">
+                                        <div>
+                                            <p class="text-white">Modalidad CxM Contrarreloj (salidas individuales)</p>
+                                            <p class="text-white"><i class="bi bi-cursor"></i>12k</p>
+                                            <p class="text-white"><i class="bi bi-triangle-half"></i> 700+ | 700-</p>
+                                            <p class="text-white"><i class="bi bi-calendar3"></i> Domingo 22 Sept. 2024</p>
+                                            <p class="text-white"><i class="bi bi-clock"></i> 9:30h</p>
+                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Real Club Campo de Golf, Los Villares (Córdoba)</p>
+                                            <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: 15 años</p>
+                                        </div>
+                                    </div>
+                                    <a href="2024#inscripciones" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Inscríbete aquí</a>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body" id="senderismo">
+                                <h5 class="card-title text-yellow-dark-custom"><i class="bi bi-tree"></i>Senderismo - Sábado</h5>
+                                <div class="col-lg-12 col-12">
+                                    <div class="">
+                                        <div>
+                                            <p class="text-white">Senderismo No Competitivo</p>
+                                            <p class="text-white"><i class="bi bi-cursor"></i>10k</p>
+                                            <p class="text-white"><i class="bi bi-triangle-half"></i> 350+ | 350-</p>
+                                            <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
+                                            <p class="text-white"><i class="bi bi-clock"></i> 8:45h</p>
+                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Albergue Provincial, Cerro Muriano (Córdoba)</p>
+                                            <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: 16 años (en caso de ser menores de 16 años tendrán que ir acompañados de un adulto bajo su responsabilidad)</p>
+                                        </div>
+                                        <a href="https://www.deporticket.com/web-formulario/26058-inscripcion-senderismo" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Inscríbete aquí</a>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body" id="marcha-nordica">
+                                <h5 class="card-title text-yellow-dark-custom"><i class="bi bi-signpost"></i> Marcha Nórdica - Domingo</h5>
+                                <div class="col-lg-12 col-12">
+                                    <div class="">
+                                        <div>
+                                            <p class="text-white">Marcha Nórdica No Competitiva</p>
+                                            <p class="text-white"><i class="bi bi-calendar3"></i> Domingo 22 Sept. 2024</p>
+                                            <p class="text-white"><i class="bi bi-clock"></i> 9:15h</p>
+                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Real Club Campo de Golf, Los Villares (Córdoba)</p>
+                                            <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: 16 años (en caso de ser menores de 16 años tendrán que ir acompañados de un adulto bajo su responsabilidad)</p>
+                                        </div>
+                                        <a href="https://www.deporticket.com/web-formulario/26051-inscripcion-marcha-nordica" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Inscríbete aquí</a>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card margin-bottom-20px blue-custom-bg border-none">
+                            <div class="card-body" id="infantil">
+                                <h5 class="card-title text-yellow-dark-custom"><i class="bi bi-emoji-smile"></i> KIDs infantil - Sábado</h5>
+
+                                <hr class="hr hr-blurry text-white" />
+
+                                <div class="col-lg-12 col-12">
+                                    <div class="">
+                                        <div>
+                                            <p class="text-white">Carrera y Entrenamiento Trail No Competitivo</p>
+                                            <p class="text-white"><i class="bi bi-cursor"></i>Duración aprox. 1:30h</p>
+                                            <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
+                                            <p class="text-white"><i class="bi bi-clock"></i> 10:00h</p>
+                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Albergue Provincial, Cerro Muriano (Córdoba)</p>
+                                            <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: sin edad mínima, se adaptarán las actividades</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr class="hr hr-blurry text-white" />
+                                <div class="col-lg-12 col-12">
+                                    <div class="">
+                                        <div>
+                                            <p class="text-white">Iniciación a la Orientación No Competitiva</p>
+                                            <p class="text-white"><i class="bi bi-cursor"></i>Duración aprox. 1:30h</p>
+                                            <p class="text-white"><i class="bi bi-calendar3"></i> Sábado 21 Sept. 2024</p>
+                                            <p class="text-white"><i class="bi bi-clock"></i> 11:30h</p>
+                                            <p class="text-white"><i class="bi bi-geo-alt-fill"></i> Albergue Provincial, Cerro Muriano (Córdoba)</p>
+                                            <p class="text-white"><i class="bi bi-exclamation-octagon"></i> Edad mínima: sin edad mínima, se adaptarán las actividades</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a href="https://www.deporticket.com/web-formulario/26059-inscripcion-infantil" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Inscríbete aquí</a>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col-lg-12 col-12">
                         <div class="card margin-bottom-20px border-none">
