--- a/contacto.html
+++ b/contacto.html
@@ -77,72 +77,13 @@
                         <li class="nav-item">
                             <a class="nav-link click-scroll text-yellow-dark-custom" href="contacto">Contacto</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="index">Inicio</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
-
-        <section class="hero-section" id="section_2024">
-            <div class="section-overlay"></div>
-
-            <div class="container d-flex justify-content-center align-items-center">
-                <div class="row">
-
-                    <div class="col-12 mt-auto mb-5 text-center">
-                        <img src="./images/califamountainfestival-logo-color-150Ancho.png" alt="Califa Mountain Festival" />
-                        <h3 class="text-white mb-5">Campeonato de Andalucía de CxM por Etapas 2024</h3>
-
-                        <a class="btn custom-btn smoothscroll" href="#">PROXIMAMENTE</a>
-                    </div>
-
-                    <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
-                        <div class="date-wrap">
-                            <h5 class="text-white">
-                                <i class="custom-icon bi-clock me-2"></i>
-                                20 - 22 SEP 2024
-                            </h5>
-                        </div>
-
-                        <div class="location-wrap mx-auto py-3 py-lg-0">
-                            <h5 class="text-white">
-                                <i class="custom-icon bi-geo-alt me-2"></i>
-                                Cerro Muriano, Córdoba
-                            </h5>
-                        </div>
-
-                        <div class="social-share">
-                            <ul class="social-icon d-flex align-items-center justify-content-center">
-                                <span class="text-white me-3">RRSS:</span>
-                                <li class="social-icon-item">
-                                    <a href="https://www.facebook.com/profile.php?id=100078855293096" target="_blank" class="social-icon-link">
-                                        <span class="bi-facebook"></span>
-                                    </a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="https://www.instagram.com/califa_mountain_festival" target="_blank" class="social-icon-link">
-                                        <span class="bi-instagram"></span>
-                                    </a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="https://www.youtube.com/@runningseries" target="_blank" class="social-icon-link">
-                                        <span class="bi-youtube"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="video-wrap">
-                <video autoplay="" loop="" muted="" class="custom-video" poster="">
-                    <source src="video/intro.mp4" type="video/mp4">
-                    Tu navegador no acepta la reproducción de video MP4 HTML5
-                </video>
-            </div>
-        </section>
 
         <section class="about-section section-padding" id="contacto">
             <div class="container">
