--- a/2024.html
+++ b/2024.html
@@ -77,6 +77,9 @@
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="contacto">Contacto</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="index">Inicio</a>
+                        </li>
                     </ul>
                 </div>
             </div>
