--- a/inscripciones/index.html
+++ b/inscripciones/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="refresh" content="0; url=2024#inscripciones" />
+    <meta http-equiv="refresh" content="0; url=/2024#inscripciones" />
 
     <meta charset="UTF-8">
     <meta name="description" content="">
